fix element not responsive

--- a/src/public/auth/style.css
+++ b/src/public/auth/style.css
@@ -148,7 +148,6 @@
   padding: 0 20px;
   display: flex;
   margin: 8px 0;
-  width: 100%;
   height: 100px;
   background: #29292E;
   align-items: center;
